<resources>
    <!--MainActivity-->
    <string name="app_name">Orienteering</string>
    <string name="action_synchronize">synchronize</string>
    <string name="BaiduMapSDK_key">VYQoC1NRUo5GoXf7tBLEK0Lv</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_title_main"> </string>
    <string name="default_title">MISSION</string>
    <string name="default_state">completed</string>
    <string name="default_time">last time  0:00</string>
    <string name="action_new_mission">new mission</string>
    <string name="action_about">about</string>
    <!--CreateActivity-->
    <string name="title_activity_create">CreateActivity</string>
    <string name="menu_title_create">Create Mission</string>
    <string name="enter_title">enter mission title</string>
    <string name="enter_question">enter a question</string>
    <string name="enter_answer">enter the answer</string>
    <string name="insert_picture"> insert a picture</string>
    <string name="save">save</string>
    <string name="create_done">create done</string>
    <string name="before">before</string>
    <string name="next">next</string>
    <string name="locate">locate</string>

    <!--MissionActivity-->
    <string name="title_activity_mission">MissionActivity</string>
    <string name="menu_title_mission">Current mission</string>
    <string name="give_up">give up</string>
    <string name="complete">complete</string>
    <string name="current_mission_title">current mission title</string>
    <string name="current_question">current question</string>
    <string name="display_picture">display a picture</string>
    <string name="confirm_answer">confirm answer</string>
    <string name="answer_question">Answer question to get hint</string>
    <string name="camera_capture">PHOTO</string>
    <string name="camera_ok">OK</string>
    <string name="camera_cancel">CANCEL</string>
    <string name="match">match</string>
    <string name="match_title">move behind camera to target</string>
    <string name="matching">matching…</string>
</resources>
