<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white_smoke"
    tools:context="com.exc.zhen.orienteering.CreateActivity">

    <EditText android:id="@+id/enter_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_title"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/pointInfoPanel_c"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/enter_title"
        android:paddingTop="5dp"
        android:layout_above="@+id/buttonPanel_c">
        <EditText android:id="@+id/enter_question"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_question"
            android:layout_gravity="center_horizontal" />
        <EditText android:id="@+id/enter_answer_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_answer"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView_c"
            android:onClick="imageView_c_click"
            android:contentDescription="@string/insert_picture"
            android:background="@drawable/img_view_bg" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonPanel_c"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/point_before_c"
                android:text="@string/before"
                android:layout_gravity="center"
                android:onClick="point_before_c_click"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/position_get"
                android:text="@string/locate"
                android:layout_gravity="center"
                android:onClick="position_get_click" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/point_next_c"
                android:text="@string/next"
                android:layout_gravity="center"
                android:onClick="point_next_c_click"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
