<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.exc.zhen.orienteering.MissionActivity"
    android:background="@color/white_smoke">

    <TextView android:id="@+id/current_mission_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_mission_title"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/pointInfoPanel_m"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/current_mission_title"
        android:paddingTop="5dp"
        android:layout_above="@+id/buttonPanel_m">

        <TextView android:id="@+id/current_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_question"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/answer_question"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:hint="@string/answer_question"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/confirm_answer"
                android:text="@string/confirm_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="confirm_answer_click"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView_m"
            android:contentDescription="@string/insert_picture"
            android:background="@drawable/img_view_bg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_before_m"
            android:layout_weight="1"
            android:onClick="point_before_m_click"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/position_confirm"
            android:layout_weight="1"
            android:onClick="position_confirm_click"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_next_m"
            android:layout_weight="1"
            android:onClick="point_next_m_click"/>
    </LinearLayout>


</RelativeLayout>
